--- a/src/main/resources/templates/comp/bookmarkList.mustache
+++ b/src/main/resources/templates/comp/bookmarkList.mustache
@@ -47,7 +47,7 @@
 		</div>
 		<div class="d-flex flex-column justify-content-around col-auto">
 			<a href="javascript:void(0);" class="btn btn-success btn-sm" onclick="openNewWindow('/resume/newWindow/{{id}}')">자세히 보기</a>
-			<a href="" class="btn btn-primary btn-sm">입사 제안</a>
+			<a href="javascript:void(0);" class="btn btn-primary btn-sm" onclick="openNewWindow('/offer/newWindow/{{id}}')">입사 제안</a>
 			<form action="/comp/bookmarkList/delete" method="post">
 				<input type="hidden" name="hiddenResumeId" value="{{id}}">
 				<input class="btn btn-danger btn-sm w-100" type="submit" value="북마크 삭제">
@@ -63,7 +63,7 @@
 	
 
 	function openNewWindow(url) {
-	  var width = 600; // 새 창의 가로 크기
+	  var width = 800; // 새 창의 가로 크기
 	  var height = 1100; // 새 창의 세로 크기
 	  var left = (window.innerWidth - width) / 2; // 화면 중앙에 위치
 	  var top = (window.innerHeight - height) / 2; // 화면 중앙에 위치
