--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -188,8 +188,8 @@
 						</div>
 					</a>
 					<div class="d-flex justify-content-between">
-						<button type="button" class="border-0 bg-white mt-1"><h3>❤️</h3></button>
-						<!-- <button type="button" class="border-0 bg-white mt-2"><h3>🤍</h3></button> -->
+						<button type="button" class="border-0 bg-white mt-1 like-button" id="posting{{id}}" onclick="bookmarkChange(`{{id}}`)"><h3>🤍</h3></button>
+						<!-- <button type="button" class="border-0 bg-white mt-2"><h3>❤️</h3></button> -->
 						<span class="expiryDate fw-bold align-self-center me-2">{{#expiryDate}}{{expiryDate}}{{/expiryDate}}</span>
 					</div>
 				</div>
@@ -371,7 +371,75 @@
 		submit.submit();
 	}
 
+	let bookmarked = '<h3>❤️</h3>';
+	let noBookmark = '<h3>🤍</h3>';
 
+	async function bookmarkPoint() {
+// console.log('bookmarkPoint실행')
+		// let response = await fetch(`/check?username=${username}`);
+		let postingNum = document.querySelectorAll(".posting");
+// 		console.log(postingNum);
+
+        let response = await fetch("/api/user/bookmark");
+		// let bookmarkPoint = document.querySelector("#username").value;
+		let body = await response.json();
+
+		let dataArray = body.data;
+		for(let item of dataArray){
+
+			let postingNum = document.querySelector(`#posting${item.id}`);
+			let currentValue = postingNum.getAttribute('data-value');
+			currentValue = true;
+			postingNum.innerHTML = bookmarked;
+			postingNum.setAttribute('data-value', currentValue);
+		}
+	}
+	// let response = await fetch("/api/tech?categoryId=" + categoryId);
+		bookmarkPoint();
+
+
+
+	async function bookmarkChange(id){
+
+		let postingNum = document.querySelector(`#posting${id}`);
+		let currentValue = postingNum.getAttribute('data-value');
+		
+
+		if( currentValue == 'true'){
+
+			console.log(id);
+			let response = await fetch(`/api/user/bookmark/${id}/delete`);
+			let body = await response.json();
+			
+			if(body.sucuess == false){
+				alert(body.data)}
+			if(body.sucuess == true){
+				alert(body.data)
+			currentValue = false;
+			postingNum.innerHTML = noBookmark;
+			}
+
+
+		}
+		else{
+			console.log(id);
+			let response = await fetch(`/api/user/bookmark/${id}/save`);
+			let body = await response.json();
+
+			if(body.sucuess == false){
+				alert(body.data)}
+			if(body.sucuess == true){
+				alert(body.data)
+			currentValue = true;
+			postingNum.innerHTML = bookmarked;
+			}
+
+		}
+
+
+		postingNum.setAttribute('data-value', currentValue);
+
+	}
 </script>
 
 
