--- a/src/main/resources/templates/comp/PostingDetail.mustache
+++ b/src/main/resources/templates/comp/PostingDetail.mustache
@@ -196,6 +196,12 @@
 	console.log(comma.value);
 	comma.value = comma.value.slice(0, -2);
 	console.log(comma.value);
+
+
+	let dateNew = document.querySelector("#dateNew");
+	// console.log(typeof dateNew.value)
+	dateNew.value = dateNew.value.split(' ')[0];
+	
 </script>
 
 {{> layout/footer}}
