회원가입 후 마이페이지 터지는거 수정

--- a/src/main/resources/templates/user/joinForm.mustache
+++ b/src/main/resources/templates/user/joinForm.mustache
@@ -30,7 +30,7 @@
 			<div class="mt-4"></div>
 
 			<div class="mb-2">
-				<input type="name" name="name" class="form-control" placeholder="이름" id="name" />
+				<input type="name" name="username" class="form-control" placeholder="이름" id="username" />
 
 			</div>
 
