개인오퍼만듬

--- a/src/main/resources/templates/user/resumeManage.mustache
+++ b/src/main/resources/templates/user/resumeManage.mustache
@@ -27,6 +27,7 @@
 				<span type="text" class="w-50">{{title}}</span>
 				<a href="/user/resume/{{id}}" class="w-20 btn btn-info">상세보기</a>
 				<a href="/user/resumeUpdateForm/{{id}}" class="w-20 btn btn-info">수정</a>
+				<a href="/user/resume/{{id}}/offerList" class="btn btn-primary btn btn-warning">입사 제안 보기</a>
 
 				<form action="/resume/delete/{{id}}" method="post">
 					<button class="btn btn-primary btn-sm" type="submit">삭제</button>
