--- a/src/main/resources/templates/user/postingDetail.mustache
+++ b/src/main/resources/templates/user/postingDetail.mustache
@@ -13,7 +13,7 @@
 
 			<div class="col-5 p-4 ms-4 bg-info">
 				<div>
-					<form action="user/bookmarkForm" method="POST" id="bookmarkForm"></form>
+					<form action="user/bookmarkForm/save" method="POST" id="bookmarkForm"></form>
 					<button type="button" class="btn btn-warning mb-3 bookmark-button" data-posting-id="{{ posting.id }}">
 						북마크하기
 					</button>
