관리자스킬추가

--- a/src/main/resources/templates/comp/bookmarkList.mustache
+++ b/src/main/resources/templates/comp/bookmarkList.mustache
@@ -36,7 +36,7 @@
 					</div>
 				</a>
 
-				<div class="text-break ps-3 pe-3">ss
+				<div class="text-break ps-3 pe-3">
 					{{personalStatement}}
 				</div>
 
